添加打马赛克

--- a/app/src/main/res/layout/activity_mosaic.xml
+++ b/app/src/main/res/layout/activity_mosaic.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.manualcoding.manualcoding.MainActivity">
+    tools:context="com.manualcoding.manualcoding.mosaic.MosaicActivity">
 
-    <com.manualcoding.manualcoding.ManualCodingView
-        android:id="@+id/manualCodingView"
+    <com.manualcoding.manualcoding.mosaic.MosaicView
+        android:id="@+id/mosaicView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </com.manualcoding.manualcoding.ManualCodingView>
+        android:layout_height="match_parent" />
 
     <android.support.v7.widget.AppCompatCheckBox
         android:id="@+id/checkbox"
@@ -25,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="撤销"
+        android:text="清空"
         android:onClick="onClick"/>
 
     <Button
@@ -37,12 +36,4 @@
         android:text="保存"
         android:onClick="onClick"/>
 
-    <Button
-        android:id="@+id/mosaicBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="马赛克"
-        android:onClick="onClick"/>
 </RelativeLayout>
